--- a/share/man/man9/sosplice.9
+++ b/share/man/man9/sosplice.9
@@ -113,7 +113,7 @@ inline or when the maximum splice length has been reached.
 If
 .Fa wait
 is
-.Dv M_WAIT ,
+.Dv M_WAITOK ,
 splitting mbufs will always succeed.
 For
 .Dv M_NOWAIT
