replace deprecated marks

--- a/bin/ksh/ksh.1
+++ b/bin/ksh/ksh.1
@@ -1412,10 +1412,10 @@ below for more information.
 .It Ev HISTCONTROL
 A colon separated list of history settings.
 If
-.Li ignoredups
+.Ql ignoredups
 is present, lines identical to the previous history line will not be saved.
 If
-.Li ignorespace
+.Ql ignorespace
 is present, lines starting with a space will not be saved.
 Unknown settings are ignored.
 .It Ev HISTFILE
